# fastapi.mip.institute

./: .gitignore  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  main.py  package.json  processed_transactions.db  pyproject.toml  requirements.txt  setup.cfg  test.py
.github/workflows/: ci-cd.yml
app/: config.py  deps.py  logging_init.py  main.py  models.py  routes.py  schemas.py  utils.py
app/database/: db_actions.py  db_init.py
app/db_middleware/: db_actions.py
app/migrations/: env.py
app/migrations/versions/: 4f8a7d1e3c2b_add_user_auth_and_promo_table.py  74d7f3v9ejds_add_show_sticky_bottom_promo_field.py  9d2f5e1a8b7c_add_promo_timestamps.py  a2b04b8337d1_initial_migration.py
app/models/: db_models.py  enums.py  schemas.py
app/routes/: admin_routes.py  api_routes.py  auth_routes.py  clients_routes.py  mail_routes.py  promo_routes.py  transaction_routes.py
app/services/: auth_services.py  email_services.py  transaction_services.py
scripts/: entrypoint  lint  start
