[tool.poetry]
name = "fastapi-mip-institute"
version = "0.1.0"
description = ""
authors = ["Bratgans <bratgans@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "0.20.0"
annotated-types = "0.7.0"
anyio = "4.7.0"
auth = "0.5.3"
blinker = "1.9.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
click = "8.1.7"
dnspython = "2.7.0"
email-validator = "2.2.0"
eventlet = "0.38.0"
falcon = "4.0.2"
fastapi = "0.115.6"
greenlet = "3.1.1"
gunicorn = "23.0.0"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.28.1"
idna = "3.10"
markupsafe = "3.0.2"
mongoengine = "0.29.1"
packaging = "24.2"
pydantic = "2.10.3"
pydantic-core = "2.27.1"
pymongo = "4.10.1"
python-dotenv = "1.0.1"
python-multipart = "0.0.19"
requests = "2.32.3"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
starlette = "0.41.3"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
uvicorn = "0.32.1"
werkzeug = "3.1.3"
pydantic-settings = "^2.7.1"
alembic = "^1.14.0"
logging = "^0.4.9.6"
orjson = "^3.10.14"
asyncpg = "^0.30.0"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
passlib = "^1.7.4"
python-jose = "^3.4.0"
bcrypt = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
